[Thennarasu] Add filter by date feature

--- a/src/app/appointments/appointments.component.html
+++ b/src/app/appointments/appointments.component.html
@@ -11,6 +11,10 @@
     <button type="submit">Add</button>
 </form>
 <h3>Your Appoinments</h3>
+<span>Filter by</span>
+<input type="date" [(ngModel)]="filterDate" name="date"/>
+<button (click)="onApplyFilter()">Apply Filter</button>
+<button (click)="onClearFilter()">Clear Filter</button>
 <table>
     <thead>
         <tr>
